@@ -1,6 +1,6 @@
 Package: tigers
 Version: 0.1-1
-Date: 2023-10-12
+Date: 2023-10-19
 Title: Integration of Geography, Environment, and Remote Sensing
 Authors@R: c(person("Emmanuel", "Paradis", role = c("aut", "cre", "cph"), email = "Emmanuel.Paradis@ird.fr", comment = c(ORCID = "0000-0003-3092-2199")))
 Imports: stats
